--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -7,8 +7,9 @@
     border-top: 5px solid green;
     border-bottom: 1px solid green;
     min-height: 56px;
+    background-color: green;	
 
-    // Positioning context for the mobile navigation icon
+// Positioning context for the mobile navigation icon
     position: relative;
 }
 
