--- a/_includes/draft.html
+++ b/_includes/draft.html
@@ -1,6 +1,7 @@
 <div class="wrapper">
 	<div class="draft">
-		<h5>THIS IS A DRAFT SITE</h5>
+		<h5>DRAFT</h5>
+		documentation for Solo
 	</div>
 </div>
 
