--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <header class="site-header">
 
   <div class="wrapper">
-
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+	  <a class="site-title" href="{{ site.baseurl }}/"><img src="../solo-logo.png" height="70px"></img></a>
+	  <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
@@ -13,7 +13,7 @@
         </svg>
       </a>
       
-{% assign sorted_pages = site.pages | sort:"weight" %}
+      {% assign sorted_pages = site.pages | sort:"weight" %}
 
       <div class="trigger">
         {% for my_page in sorted_pages %}
