--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,12 +17,13 @@
       
       <div class="trigger">
         {% for my_page in  frontpages %}
-          {% if my_page.title %}
-          <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
+          {% if my_page.url == page.url %}
+            <a class="page-link page-link-current" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
 	  {% else %}
-	  unknown page {{ my_page }}
+            <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
           {% endif %}
-        {% endfor %}
+
+	{% endfor %}
       </div>
     </nav>
 
