--- a/_includes/draft.html
+++ b/_includes/draft.html
@@ -1,8 +1,5 @@
 <div class="wrapper">
 	<div class="draft">
-		<h5>DRAFT</h5>
-		documentation for Solo
+		DRAFT DRAFT DRAFT
 	</div>
 </div>
-
-</footer>
