--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -9,9 +9,9 @@ dl, dd, ol, ul, figure {
 }
 
 /* added jdmc2 */
-table, th, td {
+/*table, th, td {
    border: 1px solid black;
-   }
+}*/
 
 
 /**
@@ -50,7 +50,6 @@ img {
     max-width: 100%;
     vertical-align: middle;
 }
-
 
 
 /**
