--- a/css/main.scss
+++ b/css/main.scss
@@ -8,7 +8,8 @@ $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
-$base-line-height: 1.5;
+//$base-line-height: 1.5;
+$base-line-height: 1.2;
 
 $spacing-unit:     30px;
 
