--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -8,10 +8,17 @@ dl, dd, ol, ul, figure {
     padding: 0;
 }
 
-/* added jdmc2 */
-/*table, th, td {
-   border: 1px solid black;
-}*/
+
+.mytable {
+   border-collapse: collapse;
+   > table, th, td {
+      border: 1px solid grey;
+      background-color: #e0e0e0;
+      }
+      
+   margin-bottom: 20px;
+   text-align: right;
+}
 
 
 /**
