updates with B's input.

--- a/css/main.scss
+++ b/css/main.scss
@@ -4,7 +4,8 @@
 @charset "utf-8";
 
 // Our variables
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+//  $base-font-family: "Sylfaen Helvetica Neue", Helvetica, Arial, sans-serif;
+$base-font-family: "Sylfaen", "New Century Schoolbook", Monospace, Arial, sans-serif;
 $base-font-size:   16px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
