--- a/css/main.scss
+++ b/css/main.scss
@@ -5,7 +5,8 @@
 
 // Our variables
 //  $base-font-family: "Sylfaen Helvetica Neue", Helvetica, Arial, sans-serif;
-$base-font-family: "Sylfaen", "New Century Schoolbook", Monospace, Arial, sans-serif;
+// $base-font-family: "Sylfaen", "New Century Schoolbook", Monospace, Arial, sans-serif;
+$base-font-family:  Arial, sans-serif;
 $base-font-size:   16px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
